--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,12 @@
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
         />
-        <title>Search Engine</title>
+        <link
+            rel="icon"
+            href="static/src/wand-magic-sparkles-solid.svg"
+            type="image/x-icon"
+        />
+        <title>Magic Prompt</title>
     </head>
     <body>
         <nav>
