--- a/templates/search.html
+++ b/templates/search.html
@@ -31,7 +31,12 @@
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
         />
-        <title>Search Results</title>
+        <link
+            rel="icon"
+            href="static/src/wand-magic-sparkles-solid.svg"
+            type="image/x-icon"
+        />
+        <title>Magic Prompt</title>
     </head>
 
     <body>
