--- a/templates/index.html
+++ b/templates/index.html
@@ -91,7 +91,22 @@
                         <!-- <input type="hidden" name="query" value="{{ value[2] }}" /> -->
                         <!-- <input type="hidden" name="title" value="{{ value[0] }}" /> -->
                         <input type="submit" value="Find Similar" />
-                        <div class="pick-this">Pick This</div>
+                        <div class="pick-this">
+                            <span>Copy</span>
+                            <svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                height="16"
+                                width="14"
+                                viewBox="0 0 448 512"
+                                class="icon-copy"
+                            >
+                                <!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.-->
+                                <path
+                                    d="M208 0H332.1c12.7 0 24.9 5.1 33.9 14.1l67.9 67.9c9 9 14.1 21.2 14.1 33.9V336c0 26.5-21.5 48-48 48H208c-26.5 0-48-21.5-48-48V48c0-26.5 21.5-48 48-48zM48 128h80v64H64V448H256V416h64v48c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V176c0-26.5 21.5-48 48-48z"
+                                    fill="white"
+                                />
+                            </svg>
+                        </div>
                     </form>
                 </div>
                 {% endfor %}
