--- a/templates/index.html
+++ b/templates/index.html
@@ -80,7 +80,7 @@
                 <div class="single-result-card">
                     <img src="{{ value[1] }}" alt="Image" />
                     <div class="prompt-text-wrapper">
-                        <p>{{ value[0] }}</p>
+                        <p class="prompt-text-p">{{ value[0] }}</p>
                     </div>
                     <form action="/search" method="POST">
                         <input
@@ -100,7 +100,6 @@
                                 viewBox="0 0 448 512"
                                 class="icon-copy"
                             >
-                                <!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.-->
                                 <path
                                     d="M208 0H332.1c12.7 0 24.9 5.1 33.9 14.1l67.9 67.9c9 9 14.1 21.2 14.1 33.9V336c0 26.5-21.5 48-48 48H208c-26.5 0-48-21.5-48-48V48c0-26.5 21.5-48 48-48zM48 128h80v64H64V448H256V416h64v48c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V176c0-26.5 21.5-48 48-48z"
                                     fill="white"
