--- a/templates/index.html
+++ b/templates/index.html
@@ -37,6 +37,32 @@
             href="static/src/wand-magic-sparkles-solid.svg"
             type="image/x-icon"
         />
+
+        <!--- Seo Part-->
+        <link rel="canonical" href="magic-prompt.net" />
+        <meta name="robots" content="index,follow" />
+        <meta name="googlebot" content="index,follow" />
+        <meta name="revisit-after" content="1 days" />
+
+        <meta property="og:type" content="website" />
+        <meta property="og:title" content="Magic Prompt" />
+        <meta property="og:url" content="magic-prompt.net" />
+        <meta property="og:site_name" content="Magic Prompt" />
+        <meta property="og:locale" content="en_US" />
+        <meta property="article:author" content="royly010@foxmail.com" />
+        <meta name="twitter:card" content="summary" />
+
+        <!-- Google tag (gtag.js) -->
+        <script src="https://www.googletagmanager.com/gtag/js?id=G-FNS66H6NJY"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() {
+                dataLayer.push(arguments);
+            }
+            gtag("js", new Date());
+
+            gtag("config", "G-FNS66H6NJY");
+        </script>
         <title>Magic Prompt</title>
     </head>
     <body>
