--- a/templates/index.html
+++ b/templates/index.html
@@ -1,19 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+    {% include "base_head.html"%}
+
     <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-            crossorigin="anonymous"
-        />
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-/mhDoLbDldZc3qpsJHpLogda//BVZbgYuw6kof4u2FrCedxOtgRZDTHgHUhOCVim"
-            crossorigin="anonymous"
-        ></script>
         <link
             rel="stylesheet"
             href="static/css/style_search.css"
@@ -24,47 +13,8 @@
             href="static/css/style_index.css"
             type="text/css"
         />
-        <link
-            rel="stylesheet"
-            href="https://fonts.googleapis.com/css?family=Special+Elite%7CSilkscreen%7CDM+Serif+Display"
-        />
-        <link
-            rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-        />
-        <link
-            rel="icon"
-            href="static/src/wand-magic-sparkles-solid.svg"
-            type="image/x-icon"
-        />
-
-        <!--- Seo Part-->
-        <link rel="canonical" href="magic-prompt.net" />
-        <meta name="robots" content="index,follow" />
-        <meta name="googlebot" content="index,follow" />
-        <meta name="revisit-after" content="1 days" />
-
-        <meta property="og:type" content="website" />
-        <meta property="og:title" content="Magic Prompt" />
-        <meta property="og:url" content="magic-prompt.net" />
-        <meta property="og:site_name" content="Magic Prompt" />
-        <meta property="og:locale" content="en_US" />
-        <meta property="article:author" content="royly010@foxmail.com" />
-        <meta name="twitter:card" content="summary" />
-
-        <!-- Google tag (gtag.js) -->
-        <script src="https://www.googletagmanager.com/gtag/js?id=G-FNS66H6NJY"></script>
-        <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag() {
-                dataLayer.push(arguments);
-            }
-            gtag("js", new Date());
-
-            gtag("config", "G-FNS66H6NJY");
-        </script>
-        <title>Magic Prompt</title>
     </head>
+
     <body>
         <nav>
             <div id="nav-title"><a href="/">Magic Prompt</a></div>
@@ -73,7 +23,7 @@
         <main>
             <div id="search-header">
                 <div id="introduce-header">
-                    <h1>Explore the world's best prompts.</h1>
+                    <h1>Explore the world's best AIGC prompts.</h1>
                     <p>Prefer. Search again. No end.</p>
                 </div>
 
