--- a/templates/index.html
+++ b/templates/index.html
@@ -26,6 +26,8 @@
                     <h1>Explore the world's best AIGC prompts.</h1>
                     <p>Prefer. Search again. No end.</p>
                 </div>
+                <form action="/search_picture" method="post" enctype="multipart/form-data"><input type="file" id="img" name="img"><button type="submit">submit</button></form>
+                
 
                 <div id="search-bar">
                     <form action="/search" method="POST" id="myForm">
