--- a/templates/index.html
+++ b/templates/index.html
@@ -26,8 +26,18 @@
                     <h1>Explore the world's best AIGC prompts.</h1>
                     <p>Prefer. Search again. No end.</p>
                 </div>
-                <form action="/submit_a_picture" method="post" enctype="multipart/form-data"><input type="file" id="img" name="img"><button type="submit">submit</button></form>
-                
+                <form
+                    action="/submit_a_picture"
+                    method="post"
+                    enctype="multipart/form-data"
+                >
+                    <input
+                        type="file"
+                        id="img"
+                        name="img"
+                        accept="image/jpeg, image/png, image/bmp, image/tiff, image/webp"
+                    /><button type="submit">submit</button>
+                </form>
 
                 <div id="search-bar">
                     <form action="/search" method="POST" id="myForm">
