--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
                                 <input
                                     type="text"
                                     name="query"
-                                    placeholder="A mountain in spring"
+                                    placeholder="{{query}}"
                                     value="{{query}}"
                                 />
                             </div>
