--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,11 @@
             <div class="results-wrapper">
                 {% for value in result %}
                 <div class="single-result-card">
-                    <img src="{{ value[1] }}" alt="Image" />
+                    <img
+                        src="{{ value[1] }}"
+                        alt="Image"
+                        onerror="imgError(this);"
+                    />
                     <div class="prompt-text-wrapper">
                         <p class="prompt-text-p">{{ value[0] }}</p>
                     </div>
