--- a/templates/base_head.html
+++ b/templates/base_head.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        
+
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
             rel="stylesheet"
@@ -15,7 +15,7 @@
             integrity="sha384-/mhDoLbDldZc3qpsJHpLogda//BVZbgYuw6kof4u2FrCedxOtgRZDTHgHUhOCVim"
             crossorigin="anonymous"
         ></script>
-        
+
         <link
             rel="stylesheet"
             href="https://fonts.googleapis.com/css?family=Special+Elite%7CSilkscreen%7CDM+Serif+Display"
@@ -73,6 +73,7 @@
 
             gtag("config", "G-FNS66H6NJY");
         </script>
+        <script src="static/js/script.js"></script>
         <title>
             Magic Prompt - Explore the best AI Image Generating Prompts
         </title>
