--- a/templates/index.html
+++ b/templates/index.html
@@ -62,7 +62,18 @@
                                 />
                             </div>
                         </div>
-                        <!-- <input type="submit" value="submit" /> -->
+                        <button
+                            class="btn btn-neutral"
+                            onclick="submit_index_form('/search')"
+                        >
+                            Search
+                        </button>
+                        <button
+                            class="btn btn-outline"
+                            onclick="submit_index_form('/generate')"
+                        >
+                            Generate
+                        </button>
                     </form>
                 </div>
             </div>
