--- a/templates/base_head.html
+++ b/templates/base_head.html
@@ -73,7 +73,17 @@
 
             gtag("config", "G-FNS66H6NJY");
         </script>
-        <script src="static/js/script.js"></script>
+        <script>
+            function imgError(img) {
+                console.log("Image error:", img.src);
+                const parentElement = img.parentElement;
+                if (parentElement) {
+                    console.log("parentElement:", parentElement);
+                    parentElement.remove();
+                    console.log("image removed");
+                }
+            }
+        </script>
         <title>
             Magic Prompt - Explore the best AI Image Generating Prompts
         </title>
