--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
                         type="file"
                         id="img"
                         name="img"
-                        accept="image/jpeg, image/png, image/bmp, image/tiff, image/webp"
+                        accept="image/jpeg, image/png, image/bmp, image/tiff, image/webp, image/jpg"
                     /><button type="submit">submit</button>
                 </form>
 
