--- a/templates/generate.html
+++ b/templates/generate.html
@@ -74,7 +74,7 @@
             </form>
             <div id="img_label_wrapper">
                 <div class="label">
-                    <span class="label-text">Generated Image</span>
+                    <span class="label-text">Generated image</span>
                 </div>
             <div id="img_wrapper">
                 
