--- a/templates/generate.html
+++ b/templates/generate.html
@@ -59,7 +59,7 @@
                         class="select select-bordered w-full max-w-xs"
                         name="model"
                     >
-                        <option name="model" value="stable_diffusion">
+                        <option value="stable_diffusion">
                             Stable Diffusion
                         </option>
                         <option value="lora">Lora</option>
