--- a/static/css/style_search.css
+++ b/static/css/style_search.css
@@ -137,7 +137,7 @@ h1{
     /* border-radius: 30px; */
 }
 
-#search-header input{
+#search-input{
     width: 100%;
     height: 50px;
     border: none;
