--- a/templates/search.html
+++ b/templates/search.html
@@ -40,6 +40,7 @@
                                     id="icon-magnifying-glass"
                                 />
                                 <input
+                                    id="search-input"    
                                     type="text"
                                     name="query"
                                     placeholder="A mountain in spring"
